# projekt-2-jStawicki15

./: CMakeLists.txt
include/: Automat.hpp  Monety.hpp  Napoje.hpp
src/: main.cpp
